--- a/src/mirall/generalsettings.ui
+++ b/src/mirall/generalsettings.ui
@@ -19,7 +19,7 @@
      <property name="title">
       <string>General Settings</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout_2">
+     <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
        <widget class="QCheckBox" name="autostartCheckBox">
         <property name="text">
@@ -38,6 +38,13 @@
        <widget class="QCheckBox" name="monoIconsCheckBox">
         <property name="text">
          <string>Use Monochrome Icons</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QCheckBox" name="overlayIconsCheckBox">
+        <property name="text">
+         <string>Enable Overlay Icons</string>
         </property>
        </widget>
       </item>
