--- a/theme.qrc
+++ b/theme.qrc
@@ -1,23 +1,41 @@
 <RCC>
     <qresource prefix="/mirall">
         <file>theme/colored/state-sync-32.png</file>
+        <file>theme/colored/state-sync-32@2x.png</file>
         <file>theme/colored/state-pause-32.png</file>
+        <file>theme/colored/state-pause-32@2x.png</file>
         <file>theme/colored/state-ok-32.png</file>
+        <file>theme/colored/state-ok-32@2x.png</file>
         <file>theme/colored/state-offline-32.png</file>
+        <file>theme/colored/state-offline-32@2x.png</file>
         <file>theme/colored/state-error-32.png</file>
+        <file>theme/colored/state-error-32@2x.png</file>
         <file>theme/colored/state-information-32.png</file>
+        <file>theme/colored/state-information-32@2x.png</file>
         <file>theme/black/state-sync-32.png</file>
+        <file>theme/black/state-sync-32@2x.png</file>
         <file>theme/black/state-pause-32.png</file>
+        <file>theme/black/state-pause-32@2x.png</file>
         <file>theme/black/state-ok-32.png</file>
+        <file>theme/black/state-ok-32@2x.png</file>
         <file>theme/black/state-offline-32.png</file>
+        <file>theme/black/state-offline-32@2x.png</file>
         <file>theme/black/state-error-32.png</file>
+        <file>theme/black/state-error-32@2x.png</file>
         <file>theme/black/state-information-32.png</file>
+        <file>theme/black/state-information-32@2x.png</file>
         <file>theme/white/state-sync-32.png</file>
+        <file>theme/white/state-sync-32@2x.png</file>
         <file>theme/white/state-pause-32.png</file>
+        <file>theme/white/state-pause-32@2x.png</file>
         <file>theme/white/state-ok-32.png</file>
+        <file>theme/white/state-ok-32@2x.png</file>
         <file>theme/white/state-offline-32.png</file>
+        <file>theme/white/state-offline-32@2x.png</file>
         <file>theme/white/state-error-32.png</file>
+        <file>theme/white/state-error-32@2x.png</file>
         <file>theme/white/state-information-32.png</file>
+        <file>theme/white/state-information-32@2x.png</file>
         <file>theme/colored/state-sync-64.png</file>
         <file>theme/colored/state-pause-64.png</file>
         <file>theme/colored/state-ok-64.png</file>
