--- a/src/gui/sharedialog.ui
+++ b/src/gui/sharedialog.ui
@@ -79,20 +79,20 @@
         <item>
          <widget class="QCheckBox" name="checkBox_password">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="text">
-           <string/>
+           <string>Set p&amp;assword</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLabel" name="label_password">
           <property name="text">
-           <string>Set p&amp;assword</string>
+           <string>Public sh&amp;aring requires a password:</string>
           </property>
           <property name="buddy">
            <cstring>checkBox_password</cstring>
