--- a/src/gui/sharedialog.ui
+++ b/src/gui/sharedialog.ui
@@ -404,6 +404,12 @@
           <property name="text">
            <string>Set &amp;Password</string>
           </property>
+          <property name="autoDefault">
+           <bool>false</bool>
+          </property>
+          <property name="default">
+           <bool>true</bool>
+          </property>
          </widget>
         </item>
         <item>
